fix Zoom flickerning issue in Safari

--- a/src/components/main/components/ZoomDialog.scss
+++ b/src/components/main/components/ZoomDialog.scss
@@ -1,4 +1,5 @@
 .VideoSessionDialog {
+  $isMinimize: 220px;
   .modal-dialog {
 
     .custom-header {
@@ -134,7 +135,12 @@
         }
         .video-canvas{
           width: 100%;
-          height: 100%;
+          height: 80vh;
+        }
+        @media (max-height: 510px) {
+          .video-canvas{
+            height: 75vh;
+          }
         }
       }
       .avatar-list {
